# Ctd2Doc

./: .gitignore  README.md  agent.md  check_pmda_page.py  main.py  manual.md  plan.md  pyproject.toml  research.md  run_ingestion_test.py  test_cookies.py  uiux.md
config/: drug_list.yaml
data/master/: y.txt
data/processed/JapicCode_160244/: target_siori.txt
data/processed/JapicCode_4291043/: target_if.txt
data/raw/JapicCode_4291043/: siori.html
data/test_vectordb/: chroma.sqlite3
data/test_vectordb_infer/: chroma.sqlite3
data/test_vectordb_pipeline/: chroma.sqlite3
notebooks/: Colab_Instructions.md
scratch/: download_first_10_drugs.py
src/: config_helper.py  gpu_utils.py  model_registry.py  pipeline.py
src/dashboard/: app.py
src/evaluation/: judge_agent.py  scoring.py
src/inference/: generator.py
src/inference/templates/: interview_form.txt  siori.txt
src/ingestion/: crawler.py  master_downloader.py  pdf_parser.py  preprocessor.py
src/rag/: embedder.py  retriever.py  vectorstore.py
src/training/: dataset_builder.py  orchestrator.py  trainer.py
tests/: test_gemma4_modules.py  test_inference_eval.py  test_ingestion.py  test_master_downloader.py  test_pipeline.py  test_rag.py  test_training.py
