[project]
name = "ctd2doc"
version = "0.1.0"
description = "Automated Self-Improving Pipeline Framework for generating medical docs from CTD"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "chardet>=5.2.0",
    "pyyaml>=6.0.1",
    "chromadb>=0.4.24",
    "sentence-transformers>=2.5.1",
    "langchain-text-splitters>=0.0.1",
    "pydantic>=2.6.4",
    "python-dotenv>=1.0.1",
    "streamlit>=1.32.0",
    "plotly>=5.19.0",
    "pynvml>=11.5.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "peft>=0.10.0",
    "trl>=0.8.1",
    "bitsandbytes>=0.42.0",
    "datasets>=2.18.0",
    "accelerate>=0.28.0",
]
dev = [
    "pytest>=8.1.1",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


